service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
    - name: first-port
      protocol: TCP
      port: 6001
      targetPort: 5001
